# pymqrest

./: .gitignore  .pip-licenses-allowlist  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff-release-notes.toml  pyproject.toml  requirements-dev.txt  requirements.txt  standards-and-conventions.md
.github/: pull_request_template.md
.github/workflows/: add-to-project.yml  ci-push.yml  ci.yml  docs.yml  publish.yml  sonarcloud.yml
1.1/: sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/ai-engineering/: index.html
dev/api/: index.html
dev/api/auth/: index.html
dev/api/commands/: index.html
dev/api/ensure/: index.html
dev/api/exceptions/: index.html
dev/api/mapping/: index.html
dev/api/session/: index.html
dev/api/sync/: index.html
dev/api/transport/: index.html
dev/architecture/: index.html
dev/design/: index.html
dev/design/nested-object-flattening/: index.html
dev/design/rationale/: index.html
dev/design/runcommand-endpoint/: index.html
dev/development/: index.html
dev/development/contributing/: index.html
dev/development/developer-setup/: index.html
dev/development/generation-scripts/: index.html
dev/development/local-mq-container/: index.html
dev/development/namespace-origin/: index.html
dev/development/quality-gates/: index.html
dev/development/release-workflow/: index.html
dev/ensure-methods/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/mapping-pipeline/: index.html
dev/mappings/: index.html
dev/mappings/apstatus/: index.html
dev/mappings/archive/: index.html
dev/mappings/authinfo/: index.html
dev/mappings/authrec/: index.html
dev/mappings/authserv/: index.html
dev/mappings/cfstatus/: index.html
dev/mappings/cfstruct/: index.html
dev/mappings/channel/: index.html
dev/mappings/chinit/: index.html
dev/mappings/chlauth/: index.html
dev/mappings/chstatus/: index.html
dev/mappings/clusqmgr/: index.html
dev/mappings/cluster/: index.html
dev/mappings/comminfo/: index.html
dev/mappings/conn/: index.html
dev/mappings/entauth/: index.html
dev/mappings/group/: index.html
dev/mappings/indoubt/: index.html
dev/mappings/listener/: index.html
dev/mappings/log/: index.html
dev/mappings/lsstatus/: index.html
dev/mappings/namelist/: index.html
dev/mappings/policy/: index.html
dev/mappings/process/: index.html
dev/mappings/pubsub/: index.html
dev/mappings/qmgr/: index.html
dev/mappings/qmstatus/: index.html
dev/mappings/qstatus/: index.html
dev/mappings/queue/: index.html
dev/mappings/sbstatus/: index.html
dev/mappings/security/: index.html
dev/mappings/service/: index.html
dev/mappings/smds/: index.html
dev/mappings/smdsconn/: index.html
dev/search/: search_index.json
dev/sync-methods/: index.html
docs/: command-metadata-extraction.md  command-metadata-first-run.md  mapping-data-structures.md  mapping-extraction-rules.md  mapping-source.json  metadata-collection-milestone.md  mq-container-local-dev.md  mq-rest-wrapper-api-surface.md  mq-rest-wrapper-design.md  mqsc-pcf-command-mapping.md  mqsc-pcf-parameter-extraction-first-run.md  repository-standards.md  standards-and-conventions.md  standards-compliance-gates.md
docs/announcements/: pymqrest-1.0.0-ga.md
docs/dependencies/: myst-parser.md  sphinx.md
docs/extraction/: mqsc-command-pages.md  mqsc-commands.md  mqsc-commands.yaml  mqsc-pcf-attribute-conflicts.yaml  mqsc-pcf-attribute-overrides.yaml  mqsc-response-parameter-macros.yaml  pcf-command-pages.yaml  pcf-commands.yaml
docs/mqsc-pcf-parameter-extraction/: apstatus.md  archive.md  authinfo.md  authrec.md  authserv.md  bsds.md  buffpool.md  cfstatus.md  cfstruct.md  channel.md  chinit.md  chlauth.md  clusqmgr.md  cluster.md  cmdserv.md  comminfo.md  conn.md  entauth.md  group.md  indoubt.md  listener.md  log.md  maxsmsgs.md  namelist.md  policy.md  process.md  psid.md  pubsub.md  qmgr.md  queue.md  security.md  service.md  smds.md  smdsconn.md  stgclass.md  subscription.md  system.md  tcluster.md  thread.md  topic.md  (+4 more)
docs/plans/: 2026-01-19-standards-compliance.md  mapping-runtime-todos.md
docs/research/: example-use-cases.md
docs/site/: mkdocs.yml
docs/site/docs/: examples.md  (+7 more)
docs/sphinx/: ai-engineering.md  architecture.md  conf.py  ensure-methods.md  examples.md  getting-started.md  index.md  mapping-pipeline.md  sync-methods.md
examples/: channel_status.py  dlq_inspector.py  health_check.py  provision_environment.py  queue_depth_monitor.py  queue_status.py
releases/: .markdownlint.json  v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.1.0.md  v1.1.1.md  v1.1.10.md  v1.1.11.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.1.9.md  v1.2.0.md
scripts/: __init__.py  generate_mapping_data.py
scripts/dev/: audit.sh  build_mapping_data.py  build_mqsc_pcf_attribute_map.py  build_mqsc_pcf_command_map.py  docs-setup.sh  extract_mqsc_command_metadata.py  extract_mqsc_command_pages.py  extract_pcf_command_metadata.py  extract_pcf_command_pages.py  generate_commands.py  generate_mapping_docs.py  lint.sh  mq_reset.sh  mq_seed.sh  mq_start.sh  mq_stop.sh  mq_verify.sh  normalize_extraction_tokens.py  prepare_release.py  refresh_mqsc_output_parameters.py  refresh_pcf_response_metadata.py  test.sh  typecheck.sh  validate_changelog.py  validate_dependency_specs.py  validate_docs.py  validate_local.py  validate_local_custom.sh  validate_pypi_version.py  validate_venv.py  validate_version.py  wait_for_pr_merge.py
scripts/git-hooks/: commit-msg  pre-commit
scripts/lint/: commit-message.sh  commit-messages.sh  markdown-standards.sh  pr-issue-linkage.sh  repo-profile.sh
src/pymqrest/: __init__.py  _mapping_merge.py  auth.py  commands.py  ensure.py  exceptions.py  mapping-data.json  mapping.py  mapping_data.py  session.py  sync.py
tests/: conftest.py
tests/integration/: test_examples.py  test_mq_integration.py
tests/pymqrest/: test_auth.py  test_ensure.py  test_mapping.py  test_mapping_generator.py  test_mapping_merge.py  test_session.py  test_sync.py
(+686 files in other folders)
