[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymqrest"
version = "1.0.2"
description = "Python wrapper for the IBM MQ REST API"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Phillip Moore", email = "w.phillip.moore@gmail.com" }]
requires-python = ">=3.12,<4.0"
keywords = ["ibm", "mq", "mqsc", "rest-api", "messaging", "queue-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/wphillipmoore/pymqrest"
Documentation = "https://wphillipmoore.github.io/pymqrest/"
Repository = "https://github.com/wphillipmoore/pymqrest"
Issues = "https://github.com/wphillipmoore/pymqrest/issues"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "ty",
    "pytest",
    "pytest-cov",
    "pip-audit",
    "types-requests",
]
docs = [
    # Anchor: 7.x lacks MyST fenced directive support; see docs/dependencies/sphinx.md
    "sphinx>=8.0",
    # Anchor: 3.x lacks Sphinx 8+ compatibility; see docs/dependencies/myst-parser.md
    "myst-parser>=4.0",
    "furo",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymqrest = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["docs/archive"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D203",   # Prefer D211 (no blank line before class)
    "D213",   # Prefer D212 (summary on first line)
    "COM812", # Handled by Ruff formatter; avoid formatter conflicts.
]

[tool.ruff.lint.isort]
known-first-party = ["pymqrest"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D1",   # Tests do not require docstrings.
    "S101", # Pytest assert style is expected.
    "S105", # Hardcoded test passwords are expected in test fixtures.
    "S106", # Hardcoded test password arguments are expected in test fixtures.
]
"scripts/**/*.py" = [
    "D1",  # Internal tooling scripts do not require docstrings.
    "T201", # Scripts use print for user-facing output.
]
"examples/**/*.py" = [
    "INP001", # Example scripts are not a package; no __init__.py needed.
    "T201",   # Example scripts use print for user-facing output.
]
"docs/sphinx/conf.py" = [
    "INP001", # Sphinx conf.py is not a package; no __init__.py needed.
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: integration tests (require PYMQREST_RUN_INTEGRATION=1)",
]
